# ai-rag-chunkenizer

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
chunkenizer/: __init__.py  cli.py  core.py
chunkenizer/extractors/: __init__.py  csv_extractor.py  docx.py  pdf.py  pptx.py  xlsx.py
docs/: index.html
examples/: basic_usage.py
