[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-rag-chunkenizer"
version = "1.0.0"
description = "Fast, token-aware document chunking for RAG pipelines"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "VIEWVALUE LLC", email = "info@viewvalue.ai"}
]
keywords = ["chunking", "rag", "nlp", "pdf", "documents", "embeddings", "ai"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "tiktoken>=0.5.0",
    "PyMuPDF>=1.23.0",
    "python-docx>=1.0.0",
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "python-pptx>=0.6.21",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
api = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "python-multipart>=0.0.6",
]

[project.scripts]
ai-rag-chunkenizer = "chunkenizer.cli:main"

[project.urls]
Homepage = "https://eph4.ai"
Documentation = "https://github.com/EPH4-AI/ai-rag-chunkenizer#readme"
Repository = "https://github.com/EPH4-AI/ai-rag-chunkenizer"
Issues = "https://github.com/EPH4-AI/ai-rag-chunkenizer/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["chunkenizer*"]
